objects/SOW__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <description>Deprecated in favor of field &apos;Product Name&apos;</description>
        <inlineHelpText>This field is deprecated in favor of the field &apos;Product Name&apos;</inlineHelpText>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>G360</fullName>
                </value>
                <value>
                    <fullName>Omni</fullName>
                </value>
                <value>
                    <fullName>Lunar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <label>Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>SOW Drafting</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>SOW Description</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Not yet started</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research</fullName>
                    <label>Research (Retrospective)</label>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                    <label>Pharma (Prospective)</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>SOWs</relationshipLabel>
        <relationshipName>SOWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protocol_Name__c</fullName>
        <formula>Project__r.Protocol_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protocol Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protocol Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REQUIRED_N_of_1_Treatment__c</fullName>
        <formula>TEXT(Need_Treatment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**EDIT THE FIELD ABOVE** You cannot email to DL-LIMS-Support without information in all of these fields, as well as Sponsor Account and LIMS Project ID</inlineHelpText>
        <label>REQUIRED: N of 1 Treatment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUIRED_type__c</fullName>
        <formula>TEXT(Project_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**EDIT THE FIELD ABOVE** You cannot email to DL-LIMS-Support without information in all of these fields, as well as Sponsor Account and LIMS Project ID</inlineHelpText>
        <label>REQUIRED: Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RUO</fullName>
                </value>
                <value>
                    <fullName>IUO</fullName>
                </value>
                <value>
                    <fullName>CLIA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Results_Type__c</fullName>
        <label>Report Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RUO</fullName>
                </value>
                <value>
                    <fullName>IUO</fullName>
                </value>
                <value>
                    <fullName>CLIA Report</fullName>
                    <label>CLIA</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retrospective_Prospective__c</fullName>
        <label>Retrospective/Prospective?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retrospective</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Budget__c</fullName>
        <formula>(Price_Per_Sample__c*Total_Anticipated_Volume__c)+Additional_Analysis_Fees__c+Set_up_Fees__c+Other_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculations are only based on this SOW and not any amendments</inlineHelpText>
        <label>SOW Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SOW_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOW Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOW_Execution_Date__c</fullName>
        <label>SOW Execution Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Execution_Dt__c</fullName>
        <label>SOW Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_Label__c</fullName>
        <formula>IF(NOT(ISBLANK(SOW_Number__c)), 
&quot;_&quot;+SOW_Number__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used to generate SOW Name field in a correct format that doesn&apos;t choke LIMS</inlineHelpText>
        <label>SOW Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Name__c</fullName>
        <formula>Sponsor_Account__r.Name + SOW_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOW Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Next_Steps__c</fullName>
        <label>SOW Next Steps</label>
        <length>1096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOW_Number__c</fullName>
        <label>SOW #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Recent_Progress__c</fullName>
        <label>SOW Recent Progress</label>
        <length>1096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOW_Status__c</fullName>
        <label>SOW Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>In-Contracting</fullName>
                </value>
                <value>
                    <fullName>Fully Executed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                    <label>Lost/Canceled</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <isActive>false</isActive>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Customer Execution</fullName>
                    <isActive>false</isActive>
                    <label>Customer Execution</label>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                    <isActive>false</isActive>
                    <label>Customer Review</label>
                </value>
                <value>
                    <fullName>Drafting</fullName>
                    <isActive>false</isActive>
                    <label>Drafting</label>
                </value>
                <value>
                    <fullName>Guardant Execution</fullName>
                    <isActive>false</isActive>
                    <label>Guardant Execution</label>
                </value>
                <value>
                    <fullName>Guardant Review</fullName>
                    <isActive>false</isActive>
                    <label>Guardant Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Type_Other__c</fullName>
        <inlineHelpText>Use this field if &apos;Other&apos; was selected for SOW Type</inlineHelpText>
        <label>SOW Type: If Other, Please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Type__c</fullName>
        <defaultValue>&quot;Sample Processing&quot;</defaultValue>
        <label>SOW Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient Referrals</fullName>
                </value>
                <value>
                    <fullName>Consortia</fullName>
                </value>
                <value>
                    <fullName>Sample Processing</fullName>
                    <default>true</default>
                    <label>Sample Processing</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Non-Pilot</fullName>
                    <isActive>false</isActive>
                    <label>Non-Pilot</label>
                </value>
                <value>
                    <fullName>Other - Please Specify</fullName>
                    <isActive>false</isActive>
                    <label>Other - Please Specify</label>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                    <isActive>false</isActive>
                    <label>Pilot</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Collection_Timepoints__c</fullName>
        <label>Sample Collection Timepoints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sample_Type__c</fullName>
        <label>Sample Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plasma</fullName>
                </value>
                <value>
                    <fullName>Blood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Volume_2019_Q1__c</fullName>
        <label>Sample Volume 2019-Q1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Volume_2019_Q2__c</fullName>
        <label>Sample Volume 2019-Q2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Volume_2019_Q3__c</fullName>
        <label>Sample Volume 2019-Q3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Product_Name__c</fullName>
        <label>Secondary Product Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>G360</fullName>
                </value>
                <value>
                    <fullName>Omni</fullName>
                </value>
                <value>
                    <fullName>LUNAR</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_RUO_Report_to_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send RUO Report to Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_up_Fees__c</fullName>
        <label>Set-up Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sponsor_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sponsor Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must be a Biopharma Account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Biopharma</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Biopharma SOWs</relationshipLabel>
        <relationshipName>SOWs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Acct_GHI__c</fullName>
        <formula>Sponsor_Account__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sponsor Acct GHI #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (10%)</fullName>
                </value>
                <value>
                    <fullName>T2 (50%)</fullName>
                </value>
                <value>
                    <fullName>T3 (75%)</fullName>
                </value>
                <value>
                    <fullName>T4 (90%)</fullName>
                </value>
                <value>
                    <fullName>T5-Closed Won</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Lost Account-Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <label>Storage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_ID__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from Study ID field on associated Program</inlineHelpText>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Name__c</fullName>
        <label>Study Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Stage_1__c</fullName>
        <label>Sub-Stage 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1a.) First Contact with client</fullName>
                </value>
                <value>
                    <fullName>1b.) Due diligence</fullName>
                </value>
                <value>
                    <fullName>2.) Cross-functional client meeting</fullName>
                </value>
                <value>
                    <fullName>3.) Deal Team meetings to discuss proposal strategy</fullName>
                </value>
                <value>
                    <fullName>4.) Proposal generation - version 1</fullName>
                </value>
                <value>
                    <fullName>5.) Client contact - discussion of proposal v1</fullName>
                </value>
                <value>
                    <fullName>6.) Revise proposal - generate v2</fullName>
                </value>
                <value>
                    <fullName>7a.) Capabilities Meeting</fullName>
                </value>
                <value>
                    <fullName>7b.) Client audit/qualification GH</fullName>
                </value>
                <value>
                    <fullName>8a.) MSA/LSA/Research Agreement</fullName>
                </value>
                <value>
                    <fullName>8b.) SoW (MS1)</fullName>
                </value>
                <value>
                    <fullName>9.) Kick-off meeting (Internal)</fullName>
                </value>
                <value>
                    <fullName>10a.) MCA</fullName>
                </value>
                <value>
                    <fullName>10b.) SoW (Full program)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Stage_2__c</fullName>
        <label>Sub-Stage 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First contact/cultivation</fullName>
                </value>
                <value>
                    <fullName>CDA</fullName>
                </value>
                <value>
                    <fullName>Capabilities</fullName>
                </value>
                <value>
                    <fullName>Proposal Generation</fullName>
                </value>
                <value>
                    <fullName>Proposal Delivery</fullName>
                </value>
                <value>
                    <fullName>Proposal defense/revision (with comment field)</fullName>
                </value>
                <value>
                    <fullName>Client Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>SoW/Contract generation</fullName>
                </value>
                <value>
                    <fullName>SoW/Contract review</fullName>
                </value>
                <value>
                    <fullName>Contract signature</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Project Kick-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Criteria__c</fullName>
        <label>Success Criteria</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Therapy_Type__c</fullName>
        <label>Therapy Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Targeted</fullName>
                </value>
                <value>
                    <fullName>Adj Targeted</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
                <value>
                    <fullName>Chemo</fullName>
                </value>
                <value>
                    <fullName>Parp</fullName>
                </value>
                <value>
                    <fullName>Hormonal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Anticipated_Volume__c</fullName>
        <label>Total Projected Number of Samples</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Samples_Forecast__c</fullName>
        <formula>Sample_Volume_2019_Q1__c+Sample_Volume_2019_Q2__c+Sample_Volume_2019_Q3__c+Sample_Volume_2019_Q4__c+
Sample_Volume_2020_Q1__c+Sample_Volume_2020_Q2__c+Sample_Volume_2020_Q3__c+Sample_Volume_2020_Q4__c+
Sample_Volume_2021_Q1__c+Sample_Volume_2021_Q2__c+Sample_Volume_2021_Q3__c+Sample_Volume_2021_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for reporting</inlineHelpText>
        <label>Total Number of Samples Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Samples_Incl_Amendments__c</fullName>
        <formula>Total_Anticipated_Volume__c+Contracted_Samples_from_Amendments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes all Contracted Samples from this SOW and all amendments to this</inlineHelpText>
        <label>Total Number of Samples Incl Amendments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Name__c</fullName>
        <label>Trial Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Phase__c</fullName>
        <formula>TEXT(Project__r.Trial_Phase__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upside_Current_Q__c</fullName>
        <inlineHelpText>Probability in Percentage</inlineHelpText>
        <label>Upside-Current Q</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Upside_Future_Q_s__c</fullName>
        <inlineHelpText>Probability in Percentage</inlineHelpText>
        <label>Upside-Future Q&apos;s</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Upside_Volume_2020_Q1__c</fullName>
        <label>Upside Volume 2020-Q1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upside_Volume_2020_Q2__c</fullName>
        <label>Upside Volume 2020-Q2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upside_Volume_2020_Q3__c</fullName>
        <label>Upside Volume 2020-Q3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X10_19__c</fullName>
        <label>Oct 2019</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X11_19__c</fullName>
        <label>Nov 2019</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_19__c</fullName>
        <label>Dec 2019</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Q1_Received__c</fullName>
        <label>2018 Q1 Received</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Q2_Received__c</fullName>
        <label>2018 Q2 Received</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Q3_Received__c</fullName>
        <label>2018 Q3 Received</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SOW</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sponsor_Account__c</columns>
        <columns>SOW_Number__c</columns>
        <columns>Project__c</columns>
        <columns>Product_Name__c</columns>
        <columns>SOW_Name__c</columns>
        <columns>LIMS_Project_ID__c</columns>
        <columns>LIMS_Project_ID_display__c</columns>
        <columns>Total_Anticipated_Volume__c</columns>
        <columns>Number_of_Samples_Processed_to_Date__c</columns>
        <columns>SOW_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LIMS_Project_ID__c</field>
            <operation>notEqual</operation>
            <value>GHI_01</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chris_D</fullName>
        <columns>SOW_Name__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SOW_Status__c</columns>
        <columns>Month_1__c</columns>
        <columns>Month_2__c</columns>
        <columns>Month_3__c</columns>
        <columns>Project_Description__c</columns>
        <columns>SOW_Recent_Progress__c</columns>
        <columns>SOW_Next_Steps__c</columns>
        <columns>Sample_Volume_2019_Q1__c</columns>
        <columns>Sample_Volume_2019_Q2__c</columns>
        <columns>Sample_Volume_2019_Q3__c</columns>
        <columns>Sample_Volume_2019_Q4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Chris</value>
        </filters>
        <filters>
            <field>SOW_Status__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Chris D</label>
        <language>en_US</language>
        <sharedTo>
            <group>Chris_D</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fully_Executed</fullName>
        <columns>NAME</columns>
        <columns>Data_Transfer_Specifications__c</columns>
        <columns>Description__c</columns>
        <columns>End_Date__c</columns>
        <columns>Lab_Type__c</columns>
        <columns>Last_Sample_In__c</columns>
        <columns>LIMS_Project_ID_display__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOW_Status__c</field>
            <operation>equals</operation>
            <value>Fully Executed</value>
        </filters>
        <label>Fully Executed</label>
        <language>en_US</language>
        <sharedTo>
            <role>Senior_Financial_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Missing_Project_ID</fullName>
        <columns>Sponsor_Account__c</columns>
        <columns>SOW_Number__c</columns>
        <columns>NAME</columns>
        <columns>SOW_Status__c</columns>
        <columns>LIMS_Project_ID_display__c</columns>
        <columns>LIMS_Project_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LIMS_Project_ID__c</field>
            <operation>equals</operation>
        </filters>
        <label>Missing Project ID</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SOW-{000000}</displayFormat>
        <label>SOW ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOWs</pluralLabel>
    <recordTypes>
        <fullName>Amendment</fullName>
        <active>true</active>
        <description>Use for SOW Amendments</description>
        <label>Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ClinDev_Trial_Project</fullName>
        <active>true</active>
        <description>Only for ClinDev SOWs</description>
        <label>ClinDev/Trial Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOW_Master</fullName>
        <active>true</active>
        <description>Use for Master SOWs</description>
        <label>SOW Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Box_Folder_Location_Rule</fullName>
        <active>true</active>
        <description>Box-folder location can not be empty if the RUO report is sent to Box.</description>
        <errorConditionFormula>Send_RUO_Report_to_Box__c &amp;&amp;  ISBLANK( Box_Folder_Location__c )</errorConditionFormula>
        <errorMessage>Box-folder location can not be empty if the RUO report is sent to Box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_all_fields_completed</fullName>
        <active>true</active>
        <description>Can&apos;t send email to DL-LIMS-Support if necessary fields are blank</description>
        <errorConditionFormula>AND
(Notify_DL_LIMS_Support__c=TRUE,
OR(
ISBLANK(Sponsor_Account__c),
ISPICKVAL(Product_Name__c, &apos;None&apos;),
ISPICKVAL(Project_Type__c, &apos;Other&apos;),
ISBLANK(LIMS_Project_ID__c),
ISPICKVAL(Need_Treatment__c, &apos;None&apos;)))</errorConditionFormula>
        <errorMessage>Cannot Send Email if any of the following fields are empty:
Sponsor Account,
Product Name,
Program Type,
LIMS Project ID,
Needs Treatment {N-of-1}</errorMessage>
    </validationRules>
</CustomObject>